--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,9 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>React App</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=4WvnHNXZ8KDTaHBa2IvoP7IN9Zz2pV4h">
+//v2.0版本的引用方式：src="http://api.map.baidu.com/api?v=2.0&ak=您的密钥"
+</script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
